--- a/package.json
+++ b/package.json
@@ -22,5 +22,20 @@
   "bugs": {
     "url": "https://github.com/mavisland/boilerplate/issues"
   },
-  "homepage": "https://github.com/mavisland/boilerplate#readme"
+  "homepage": "https://github.com/mavisland/boilerplate#readme",
+  "devDependencies": {
+    "grunt-bake": "^0.3.16",
+    "grunt-contrib-clean": "^0.7.0",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-copy": "^0.8.2",
+    "grunt-contrib-cssmin": "^0.14.0",
+    "grunt-contrib-jshint": "^0.11.3",
+    "grunt-contrib-less": "^1.1.0",
+    "grunt-contrib-uglify": "^0.11.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-git": "^0.3.7",
+    "jshint-stylish": "^2.1.0",
+    "load-grunt-tasks": "^3.3.0",
+    "time-grunt": "^1.2.2"
+  }
 }
