--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/mavisland/boilerplate#readme",
   "devDependencies": {
+    "grunt": "^0.4.5",
     "grunt-bake": "^0.3.16",
     "grunt-contrib-clean": "^0.7.0",
     "grunt-contrib-concat": "^0.5.1",
